Started added bootstrap layouts

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -12,5 +12,66 @@
     <Schedule />
     <Template Key="8a6f705f-2f7f-48c9-8d60-9dbbc544aa3a">Home</Template>
   </Info>
-  <Properties />
+  <Properties>
+    <heroButtons>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/a06307bfa6aa4528bef70b633fee8906"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "39ae5064-015b-46e9-9a7b-73663ae1c712",
+      "udi": "umb://element/a06307bfa6aa4528bef70b633fee8906",
+      "internalName": "Explore",
+      "link": "[{\"name\":\"Explore\",\"udi\":\"umb://document/64837c0645a041089d97a64c1cf74240\"}]",
+      "type": "btn-primary"
+    }
+  ],
+  "settingsData": []
+}]]></Value>
+    </heroButtons>
+    <heroHeading>
+      <Value><![CDATA[{
+  "textAlign": "left",
+  "hTag": "h1",
+  "text": "Sell products the easy way with UmbCheckout"
+}]]></Value>
+    </heroHeading>
+    <heroImage>
+      <Value><![CDATA[[
+  {
+    "key": "653f2452-e8a3-4595-b152-8f9a68c00302",
+    "mediaKey": "e594ab87-8b34-4de3-b76f-57d1092bf8e2"
+  }
+]]]></Value>
+    </heroImage>
+    <heroText>
+      <Value><![CDATA[<p><span class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget odio neque. Nunc ac ipsum maximus, hendrerit tortor eget, tincidunt ligula. Nulla nec ultricies libero.</span></p>]]></Value>
+    </heroText>
+    <metaData>
+      <Value><![CDATA[{
+  "title": "Home",
+  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget odio neque. Nunc ac ipsum maximus, hendrerit tortor eget, tincidunt ligula. Nulla nec ultricies libero.",
+  "noIndex": false,
+  "shareTitle": "Home",
+  "shareDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget odio neque. Nunc ac ipsum maximus, hendrerit tortor eget, tincidunt ligula. Nulla nec ultricies libero.",
+  "shareImage": "e594ab87-8b34-4de3-b76f-57d1092bf8e2",
+  "shareImageUrl": "/media/qgvjjzju/high-fashion-portrait-young-elegant-blonde-woman-black-wool-hat-wearing-oversize-white-fringe-poncho-with-long-grey-dress.jpg",
+  "default": {
+    "title": "",
+    "description": ""
+  },
+  "share": {
+    "title": "",
+    "description": "",
+    "image": null,
+    "imageUrl": null
+  }
+}]]></Value>
+    </metaData>
+  </Properties>
 </Content>
