--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
@@ -5,7 +5,7 @@
     <Icon>icon-home color-black</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
-    <AllowAtRoot>True</AllowAtRoot>
+    <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
@@ -15,13 +15,88 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Folder>Pages</Folder>
-    <Compositions />
+    <Compositions>
+      <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
+    </Compositions>
     <DefaultTemplate>Home</DefaultTemplate>
     <AllowedTemplates>
       <Template Key="8a6f705f-2f7f-48c9-8d60-9dbbc544aa3a">Home</Template>
     </AllowedTemplates>
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>97dbe445-f832-467e-88f9-724320096dc7</Key>
+      <Name>Buttons</Name>
+      <Alias>heroButtons</Alias>
+      <Definition>3e7859e0-3c83-486e-8a1e-485e1cbba577</Definition>
+      <Type>Umbraco.BlockList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="hero">Hero</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>1654ee33-7a40-421b-99de-74d5ef7e51f9</Key>
+      <Name>Heading</Name>
+      <Alias>heroHeading</Alias>
+      <Definition>9919f8a2-7b68-4fed-bf9b-a93568860eb0</Definition>
+      <Type>ourHtagEditor</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="hero">Hero</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>b3dbdc9b-2cea-4c0e-8bc5-da4b66620097</Key>
+      <Name>Image</Name>
+      <Alias>heroImage</Alias>
+      <Definition>2e83bf91-84c3-4977-b52d-a5269a74b7a1</Definition>
+      <Type>Umbraco.MediaPicker3</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="hero">Hero</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>236a4603-4179-40ac-8075-c7409b487291</Key>
+      <Name>Intro Text</Name>
+      <Alias>heroText</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="hero">Hero</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>82134921-5b3a-4092-9d54-c97c8713862e</Key>
+      <Caption>Hero</Caption>
+      <Alias>hero</Alias>
+      <Type>Tab</Type>
+      <SortOrder>0</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
