--- a/UmbCheckout.StarterKit.Web/uSync/v9/MediaTypes/image.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/MediaTypes/image.config
@@ -5,13 +5,28 @@
     <Icon>icon-picture</Icon>
     <Thumbnail>icon-picture</Thumbnail>
     <Description></Description>
-    <AllowAtRoot>True</AllowAtRoot>
+    <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <Compositions />
   </Info>
   <GenericProperties>
+    <GenericProperty>
+      <Key>4b5dc548-6c51-4df9-9d3a-fad4d1642322</Key>
+      <Name>Alt</Name>
+      <Alias>alt</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[The image alt text]]></Description>
+      <SortOrder>5</SortOrder>
+      <Tab Alias="image">Image</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
     <GenericProperty>
       <Key>00000009-0000-0000-0000-000000000000</Key>
       <Name>Size</Name>
