Footer and products pages

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -54,16 +54,16 @@
     </heroText>
     <metaData>
       <Value><![CDATA[{
-  "title": "Home",
-  "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget odio neque. Nunc ac ipsum maximus, hendrerit tortor eget, tincidunt ligula. Nulla nec ultricies libero.",
+  "title": "UmbCheckout Demo - The easy to use eCommerce solution",
+  "description": "UmbCheckout is an easy to use eCommerce solution for the Umbraco CMS.",
   "noIndex": false,
-  "shareTitle": "Home",
-  "shareDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget odio neque. Nunc ac ipsum maximus, hendrerit tortor eget, tincidunt ligula. Nulla nec ultricies libero.",
+  "shareTitle": "UmbCheckout Demo - The easy to use eCommerce solution",
+  "shareDescription": "UmbCheckout is an easy to use eCommerce solution for the Umbraco CMS.",
   "shareImage": "e594ab87-8b34-4de3-b76f-57d1092bf8e2",
   "shareImageUrl": "/media/qgvjjzju/high-fashion-portrait-young-elegant-blonde-woman-black-wool-hat-wearing-oversize-white-fringe-poncho-with-long-grey-dress.jpg",
   "default": {
-    "title": "",
-    "description": ""
+    "title": "UmbCheckout Demo - The easy to use eCommerce solution",
+    "description": "UmbCheckout is an easy to use eCommerce solution for the Umbraco CMS."
   },
   "share": {
     "title": "",
