--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -7,15 +7,305 @@
     <ContentType>siteSettings</ContentType>
     <CreateDate>2023-08-11T14:48:40</CreateDate>
     <NodeName Default="Site Settings" />
-    <SortOrder>0</SortOrder>
+    <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
   </Info>
   <Properties>
+    <copyright>
+      <Value><![CDATA[Copyright © [[YEAR]] [[SITENAME]], All Rights Reserved.]]></Value>
+    </copyright>
+    <footerNavigation>
+      <Value><![CDATA[[
+  {
+    "udi": null,
+    "description": null,
+    "title": "Section",
+    "target": null,
+    "noopener": false,
+    "noreferrer": false,
+    "anchor": null,
+    "url": null,
+    "children": [
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      }
+    ],
+    "icon": "icon-tag",
+    "includeChildNodes": false,
+    "itemType": "nolink"
+  },
+  {
+    "udi": null,
+    "description": null,
+    "title": "Section",
+    "target": null,
+    "noopener": false,
+    "noreferrer": false,
+    "anchor": null,
+    "url": null,
+    "children": [
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      }
+    ],
+    "icon": "icon-tag",
+    "includeChildNodes": false,
+    "itemType": "nolink"
+  },
+  {
+    "udi": null,
+    "description": null,
+    "title": "Section",
+    "target": null,
+    "noopener": false,
+    "noreferrer": false,
+    "anchor": null,
+    "url": null,
+    "children": [
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      },
+      {
+        "udi": "umb://document/64837c0645a041089d97a64c1cf74240",
+        "key": "64837c06-45a0-4108-9d97-a64c1cf74240",
+        "name": "Home",
+        "description": "/",
+        "title": "Home",
+        "url": "/",
+        "children": [],
+        "icon": "icon-home color-black",
+        "published": true,
+        "naviHide": false,
+        "culture": null,
+        "itemType": "link"
+      }
+    ],
+    "icon": "icon-tag",
+    "includeChildNodes": false,
+    "itemType": "nolink"
+  }
+]]]></Value>
+    </footerNavigation>
+    <mailChimpSignupSubtitle>
+      <Value><![CDATA[Monthly digest of what's new and exciting from us.]]></Value>
+    </mailChimpSignupSubtitle>
+    <mailChimpSignupTitle>
+      <Value><![CDATA[Subscribe to our newsletter]]></Value>
+    </mailChimpSignupTitle>
+    <mailChimpSignupURL>
+      <Value><![CDATA[https://umbcheckout.us6.list-manage.com/subscribe/post?u=e6d9d3c98d1ea018bbcd617f6&id=5e49d19f4a]]></Value>
+    </mailChimpSignupURL>
     <siteName>
       <Value><![CDATA[UmbCheckout Demo]]></Value>
     </siteName>
+    <socialIcons>
+      <Value><![CDATA[[
+  {
+    "network": "twitter",
+    "name": "Twitter",
+    "url": "https://twitter.com/"
+  },
+  {
+    "network": "instagram",
+    "name": "Instagram",
+    "url": "https://instagram.com/"
+  },
+  {
+    "network": "facebook",
+    "name": "Facebook",
+    "url": "https://facebook.com/"
+  }
+]]]></Value>
+    </socialIcons>
     <topNavigation>
       <Value><![CDATA[[
   {
