--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/MetaMomentum.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/MetaMomentum.config
@@ -9,8 +9,8 @@
   "showSearchFields": "1",
   "showSearchPreviewGoogle": "1",
   "showNoIndexdOption": "1",
-  "fallbackTitleFields": "heroHeading,title,pageTitle,pageName,name",
-  "fallbackDescriptionFields": "heroText,description,desc",
+  "fallbackTitleFields": "heroHeading,title,productName,pageTitle,pageName,name",
+  "fallbackDescriptionFields": "heroText,description,heroIntroduction,desc",
   "fallbackImageFields": "heroImage,featureImage,heroImage",
   "showSocialFields": "1",
   "showSocialPreviewFacebook": "1",
