--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/RichtextEditor.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/RichtextEditor.config
@@ -6,10 +6,27 @@
     <DatabaseType>Ntext</DatabaseType>
   </Info>
   <Config><![CDATA[{
-  "Editor": null,
+  "Editor": {
+    "toolbar": [
+      "styleselect",
+      "bold",
+      "italic",
+      "underline",
+      "bullist",
+      "numlist",
+      "link",
+      "umbmediapicker",
+      "umbembeddialog"
+    ],
+    "stylesheets": [
+      "/css/editor.css"
+    ],
+    "maxImageSize": 500,
+    "mode": "classic"
+  },
   "HideLabel": false,
   "IgnoreUserStartNodes": false,
   "MediaParentId": null,
-  "OverlaySize": null
+  "OverlaySize": "small"
 }]]></Config>
 </DataType>
