--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/featuredproductsblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/featuredproductsblock.config
@@ -1,91 +1,85 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="1e9f29f6-95e4-4279-bca6-8bc4f47c9062" Alias="home" Level="2">
+<ContentType Key="dee6aa15-7b3d-416c-a916-b544a4c21eab" Alias="featuredProductsBlock" Level="2">
   <Info>
-    <Name>Home</Name>
-    <Icon>icon-home color-black</Icon>
+    <Name>Featured Products</Name>
+    <Icon>icon-box color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
+    <IsElement>true</IsElement>
     <HistoryCleanup>
       <PreventCleanup>False</PreventCleanup>
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Pages</Folder>
-    <Compositions>
-      <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
-    </Compositions>
-    <DefaultTemplate>Home</DefaultTemplate>
-    <AllowedTemplates>
-      <Template Key="8a6f705f-2f7f-48c9-8d60-9dbbc544aa3a">Home</Template>
-    </AllowedTemplates>
+    <Folder>Blocks</Folder>
+    <Compositions />
+    <DefaultTemplate></DefaultTemplate>
+    <AllowedTemplates />
   </Info>
-  <Structure>
-    <ContentType Key="fe6014e9-b08a-4dcd-9b97-af02cd2d1fcf" SortOrder="0">products</ContentType>
-  </Structure>
+  <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>97dbe445-f832-467e-88f9-724320096dc7</Key>
-      <Name>Buttons</Name>
-      <Alias>heroButtons</Alias>
-      <Definition>3e7859e0-3c83-486e-8a1e-485e1cbba577</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
-      <Tab Alias="hero">Hero</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>1654ee33-7a40-421b-99de-74d5ef7e51f9</Key>
-      <Name>Heading</Name>
-      <Alias>heroHeading</Alias>
-      <Definition>9919f8a2-7b68-4fed-bf9b-a93568860eb0</Definition>
-      <Type>ourHtagEditor</Type>
+      <Key>bcadfc2d-1622-4abd-a4be-3f3c4dd9df61</Key>
+      <Name>Featured Products</Name>
+      <Alias>featuredProducts</Alias>
+      <Definition>b3b6c586-0224-4d6b-9842-61e6907758f1</Definition>
+      <Type>Umbraco.MultiNodeTreePicker</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="hero">Hero</Tab>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>b3dbdc9b-2cea-4c0e-8bc5-da4b66620097</Key>
-      <Name>Image</Name>
-      <Alias>heroImage</Alias>
-      <Definition>2e83bf91-84c3-4977-b52d-a5269a74b7a1</Definition>
-      <Type>Umbraco.MediaPicker3</Type>
-      <Mandatory>false</Mandatory>
+      <Key>ee2a7e34-79bb-4476-ba78-701877f4013d</Key>
+      <Name>Heading</Name>
+      <Alias>heading</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
-      <Tab Alias="hero">Hero</Tab>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>236a4603-4179-40ac-8075-c7409b487291</Key>
-      <Name>Intro Text</Name>
-      <Alias>heroText</Alias>
+      <Key>660f240b-dcd7-4abb-a518-ec7b85b30c68</Key>
+      <Name>Internal Name</Name>
+      <Alias>internalName</Alias>
+      <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[The heading used to identify the block in the backoffice]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>c9828d79-ac7b-45af-93ab-5c22e2ddafc5</Key>
+      <Name>Introduction</Name>
+      <Alias>introduction</Alias>
       <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
       <Type>Umbraco.TinyMCE</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="hero">Hero</Tab>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -94,9 +88,9 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>82134921-5b3a-4092-9d54-c97c8713862e</Key>
-      <Caption>Hero</Caption>
-      <Alias>hero</Alias>
+      <Key>7759fb01-e2b4-4140-8da1-e5d83ed50f5c</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
       <Type>Tab</Type>
       <SortOrder>0</SortOrder>
     </Tab>
