--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/sitesettings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/sitesettings.config
@@ -21,6 +21,86 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>90c27328-2f99-4e58-a318-b27743638621</Key>
+      <Name>Copyright</Name>
+      <Alias>copyright</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>543abd83-a551-4644-80d1-609fb9b3c1fe</Key>
+      <Name>Footer Navigation</Name>
+      <Alias>footerNavigation</Alias>
+      <Definition>570afca3-a885-4d0a-b147-135c769cc75b</Definition>
+      <Type>AaronSadler.UmbNav</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="footerNavigation">Footer Navigation</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>515cf2d0-ef15-430c-a4c9-03668785618b</Key>
+      <Name>Signup Subtitle</Name>
+      <Alias>mailChimpSignupSubtitle</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="settings/newsletter">Newsletter</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>61b9b982-ab0d-4c92-9864-4b1dc7c47c8e</Key>
+      <Name>Signup Title</Name>
+      <Alias>mailChimpSignupTitle</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="settings/newsletter">Newsletter</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>bc98b204-1cfa-4c70-9b60-fa2fef716de0</Key>
+      <Name>MailChimp Signup URL</Name>
+      <Alias>mailChimpSignupURL</Alias>
+      <Definition>abb43101-e590-41d4-8248-a45c446704a4</Definition>
+      <Type>Umbraco.Community.Contentment.TextInput</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="settings/newsletter">Newsletter</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>8ca6d3c2-6a77-46d8-bdce-cc24eddd9c86</Key>
       <Name>Site Name</Name>
       <Alias>siteName</Alias>
@@ -30,6 +110,22 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
+      <Tab Alias="settings">Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>995a21d1-a9b7-4b63-a6ca-84b2facc7f74</Key>
+      <Name>Social Icons</Name>
+      <Alias>socialIcons</Alias>
+      <Definition>f114439d-f9ec-4f0b-82c5-57f7b6043c37</Definition>
+      <Type>Umbraco.Community.Contentment.SocialLinks</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
       <Tab Alias="settings">Settings</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -62,11 +158,25 @@
       <SortOrder>1</SortOrder>
     </Tab>
     <Tab>
+      <Key>713ed6fd-e0b1-4401-a2e1-54281e5b4a11</Key>
+      <Caption>Newsletter</Caption>
+      <Alias>settings/newsletter</Alias>
+      <Type>Group</Type>
+      <SortOrder>0</SortOrder>
+    </Tab>
+    <Tab>
       <Key>a51ae1f5-7daa-4b5f-82a7-4f4b2ebf6405</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Tab</Type>
       <SortOrder>0</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>a7243ca4-feb9-4a34-99f1-7bba1dba4e48</Key>
+      <Caption>Footer Navigation</Caption>
+      <Alias>footerNavigation</Alias>
+      <Type>Tab</Type>
+      <SortOrder>2</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
