--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/FooterNavigation.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/FooterNavigation.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="bba03965-9192-4ecc-a956-0c6fc024250a" Alias="Top Navigation" Level="1">
+<DataType Key="570afca3-a885-4d0a-b147-135c769cc75b" Alias="Footer Navigation" Level="1">
   <Info>
-    <Name>Top Navigation</Name>
+    <Name>Footer Navigation</Name>
     <EditorAlias>AaronSadler.UmbNav</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
@@ -10,7 +10,7 @@
   "AllowDisplay": false,
   "AllowDisplayAsLabel": false,
   "AllowImageIcon": false,
-  "AllowLabels": false,
+  "AllowLabels": true,
   "ExpandOnHover": true,
   "ExpandOnHoverTimeout": 500,
   "HideIncludeChildren": false,
