--- a/UmbCheckout.StarterKit.Web/uSync/v9/Languages/en-us.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Languages/en-us.config
@@ -1,7 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Language Key="00000409-0000-0000-0000-000000000000" Alias="en-US" Level="0">
-  <Name>English (United States)</Name>
-  <IsoCode>en-US</IsoCode>
-  <IsMandatory>false</IsMandatory>
-  <IsDefault>true</IsDefault>
-</Language>
+<Empty Key="b5fce68d-cdeb-434e-8742-0467b766650b" Alias="en-US" Change="Delete" />
