--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
@@ -20,7 +20,11 @@
       <Value><![CDATA[Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.]]></Value>
     </description>
     <detailedDescription>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla justo eros, bibendum eget quam eget, tincidunt vestibulum enim. Integer et erat scelerisque, scelerisque ex ut, vulputate nulla. Morbi at tellus consequat, viverra magna a, gravida tortor. Maecenas enim nulla, rutrum a pulvinar quis, lobortis id orci. Vivamus felis enim, interdum quis nisi vitae, rhoncus eleifend nibh. Mauris erat eros, lobortis sed nulla ut, posuere eleifend mauris. Mauris in magna sed lacus aliquam sagittis ac eu elit. Proin nibh purus, dignissim quis suscipit euismod, congue ut nunc. Maecenas malesuada consequat magna nec sollicitudin.</p>
+<p>Integer ut tristique risus. Nullam rhoncus molestie est sed semper. Sed ornare rhoncus pellentesque. Nunc vitae tempus velit, sit amet suscipit ipsum. Donec sit amet lacus a nulla finibus sollicitudin. Pellentesque et mollis est. Cras massa magna, elementum facilisis erat sit amet, semper molestie sapien. Vestibulum laoreet vitae lectus viverra faucibus. Quisque in odio eget elit pulvinar tincidunt. Integer finibus malesuada orci, ac auctor diam sollicitudin vitae.</p>
+<p>Vestibulum a tincidunt tortor. Pellentesque commodo tortor condimentum fermentum tristique. Integer ornare vulputate leo, in porttitor neque eleifend at. Praesent tellus eros, finibus aliquam sollicitudin quis, congue sit amet orci. Quisque gravida diam sollicitudin, mattis odio placerat, fermentum nisi. Sed gravida ullamcorper sem, id hendrerit mi aliquet in. Quisque pellentesque fermentum congue. Donec ut urna non ante euismod pellentesque sed ut dolor. Maecenas elementum purus non lectus varius, et porttitor mi malesuada. Morbi ornare venenatis ante et dapibus.</p>
+<p>Pellentesque in egestas felis, eu placerat justo. Morbi venenatis quam quis eleifend tempor. Pellentesque commodo dictum lorem, quis placerat velit ullamcorper sed. Nullam semper molestie mi dapibus interdum. Cras feugiat pulvinar elit sit amet dictum. Mauris bibendum tellus non lorem fringilla, ut auctor lorem volutpat. Praesent varius felis tortor, eu rutrum felis gravida in. Integer vel consequat justo. In mollis luctus ornare.</p>
+<p>Pellentesque orci sem, condimentum quis vestibulum non, semper sed mi. Nam dignissim placerat metus quis tempus. Mauris efficitur nibh nec ornare lobortis. Praesent varius, dui vel porta fermentum, mi odio hendrerit turpis, posuere congue elit risus a nulla. Donec lacinia, ipsum vitae ornare sodales, leo metus tempus ante, efficitur ultricies lorem diam in tellus. Mauris a luctus arcu. Sed vel tincidunt ex, sit amet volutpat lorem. In sollicitudin mi elit, sit amet bibendum ex molestie dignissim. Aliquam ornare condimentum lorem, ac eleifend arcu porttitor a. Suspendisse pulvinar, urna vel volutpat consectetur, purus nibh posuere enim, vel ultrices dolor massa sed dolor. Cras at dignissim mi. Sed maximus quis felis non vehicula. Aliquam varius dignissim augue ut gravida.</p>]]></Value>
     </detailedDescription>
     <features>
       <Value><![CDATA[{
@@ -97,7 +101,11 @@
           "y2": 0.39995601880202725
         }
       }
-    ]
+    ],
+    "focalPoint": {
+      "left": 0.486,
+      "top": 0.3977423841418181
+    }
   }
 ]]]></Value>
     </photos>
