--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ProductPhotos.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ProductPhotos.config
@@ -12,6 +12,12 @@
       "height": 225,
       "label": "Thumbnail",
       "width": 420
+    },
+    {
+      "alias": "carousel",
+      "height": 400,
+      "label": "Carousel",
+      "width": 636
     }
   ],
   "EnableLocalFocalPoint": true,
