--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -309,9 +309,9 @@
     <topNavigation>
       <Value><![CDATA[[
   {
-    "description": "#",
+    "description": "/shop/",
     "title": "Shop",
-    "url": "#",
+    "url": "/shop/",
     "children": [
       {
         "description": "#",
@@ -354,8 +354,15 @@
         "itemType": "link"
       }
     ],
-    "icon": "icon-link",
-    "itemType": "link"
+    "icon": "icon-shipping-box color-black",
+    "itemType": "link",
+    "udi": "umb://document/1435f4ed51a2467c9860d2b9e8092854",
+    "key": "1435f4ed-51a2-467c-9860-d2b9e8092854",
+    "name": "Shop",
+    "anchor": "",
+    "published": true,
+    "naviHide": false,
+    "culture": null
   },
   {
     "description": "#",
