--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
@@ -109,14 +109,14 @@
   }
 ]]]></Value>
     </photos>
-    <price>
-      <Value><![CDATA[199]]></Value>
-    </price>
     <productName>
       <Value><![CDATA[Biker Jacket]]></Value>
     </productName>
     <sku>
       <Value><![CDATA[UMB-BIKER-JACKET]]></Value>
     </sku>
+    <umbCheckoutPrice>
+      <Value><![CDATA[199]]></Value>
+    </umbCheckoutPrice>
   </Properties>
 </Content>
