--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -7,7 +7,7 @@
     <ContentType>siteSettings</ContentType>
     <CreateDate>2023-08-11T14:48:40</CreateDate>
     <NodeName Default="Site Settings" />
-    <SortOrder>2</SortOrder>
+    <SortOrder>5</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
@@ -362,7 +362,8 @@
     "anchor": "",
     "published": true,
     "naviHide": false,
-    "culture": null
+    "culture": null,
+    "id": 1092
   },
   {
     "description": "#",
@@ -383,14 +384,6 @@
   {
     "description": "#",
     "title": "Contact",
-    "url": "#",
-    "children": [],
-    "icon": "icon-link",
-    "itemType": "link"
-  },
-  {
-    "description": "#",
-    "title": "Basket",
     "url": "#",
     "children": [],
     "icon": "icon-link",
