--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
@@ -106,22 +106,6 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>1d1baed3-c386-44d8-b936-a912d6f862fc</Key>
-      <Name>Price</Name>
-      <Alias>price</Alias>
-      <Definition>0d8837d6-af1e-4086-9665-147ad07cf34f</Definition>
-      <Type>Umbraco.Decimal</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="productDetails">Product Details</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
       <Key>ad92b398-7c4b-4ef5-8bb2-76f38b479905</Key>
       <Name>Product Name</Name>
       <Alias>productName</Alias>
@@ -147,6 +131,22 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>4</SortOrder>
+      <Tab Alias="productDetails">Product Details</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>1d1baed3-c386-44d8-b936-a912d6f862fc</Key>
+      <Name>Price</Name>
+      <Alias>umbCheckoutPrice</Alias>
+      <Definition>0d8837d6-af1e-4086-9665-147ad07cf34f</Definition>
+      <Type>Umbraco.Decimal</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
       <Tab Alias="productDetails">Product Details</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
