--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
@@ -25,6 +25,8 @@
   </Info>
   <Structure>
     <ContentType Key="fe6014e9-b08a-4dcd-9b97-af02cd2d1fcf" SortOrder="0">products</ContentType>
+    <ContentType Key="bad694bd-0633-480e-a17d-2dbf83dc795e" SortOrder="1">basket</ContentType>
+    <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="2">contentPage</ContentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
