Wired up categories

--- a/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
+++ b/UmbCheckout.StarterKit.Web/UmbCheckout.StarterKit.Web.csproj
@@ -4,6 +4,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="IISUrlRewrite.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="IISUrlRewrite.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MetaMomentum" Version="2.2.0" />
