Home page content blocks

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/shop.config
@@ -18,7 +18,8 @@
   "layout": {
     "Umbraco.BlockList": [
       {
-        "contentUdi": "umb://element/e8a36e162ef2408ebbe97b45f6480072"
+        "contentUdi": "umb://element/e8a36e162ef2408ebbe97b45f6480072",
+        "settingsUdi": "umb://element/4586b550676840dc8140cd58abfa30cd"
       }
     ]
   },
@@ -32,7 +33,13 @@
       "featuredProducts": "umb://document/f2f51c356eca476aab74f81d09d9bbe7,umb://document/dfb987e7a717451d9072c51b78d636fc,umb://document/5cfd5e8c156b427688e73ffd05c9359e"
     }
   ],
-  "settingsData": []
+  "settingsData": [
+    {
+      "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "udi": "umb://element/4586b550676840dc8140cd58abfa30cd",
+      "backgroundColour": "{\r\n  \"value\": \"1a1d20\",\r\n  \"label\": \"Dark Subtle\",\r\n  \"sortOrder\": 15,\r\n  \"id\": \"16\"\r\n}"
+    }
+  ]
 }]]></Value>
     </contentBlocks>
     <heading>
