--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -314,44 +314,49 @@
     "url": "/shop/",
     "children": [
       {
-        "description": "#",
-        "title": "T-Shirts",
-        "url": "#",
+        "description": "/shop/category/bingo/",
+        "title": "Bingo",
+        "url": "/shop/category/bingo/",
         "children": [],
         "icon": "icon-link",
-        "itemType": "link"
+        "itemType": "link",
+        "anchor": ""
       },
       {
-        "description": "#",
-        "title": "Underware",
-        "url": "#",
-        "children": [],
-        "icon": "icon-link",
-        "itemType": "link"
-      },
-      {
-        "description": "#",
+        "description": "/shop/category/clothing/",
         "title": "Clothing",
-        "url": "#",
+        "url": "/shop/category/clothing/",
         "children": [],
         "icon": "icon-link",
-        "itemType": "link"
+        "itemType": "link",
+        "anchor": ""
       },
       {
-        "description": "#",
-        "title": "Watches",
-        "url": "#",
+        "description": "/shop/category/sports/",
+        "title": "Sports",
+        "url": "/shop/category/sports/",
         "children": [],
         "icon": "icon-link",
-        "itemType": "link"
+        "itemType": "link",
+        "anchor": ""
       },
       {
-        "description": "#",
-        "title": "Shoes",
-        "url": "#",
+        "description": "/shop/category/tattoo/",
+        "title": "Tattoo",
+        "url": "/shop/category/tattoo/",
         "children": [],
         "icon": "icon-link",
-        "itemType": "link"
+        "itemType": "link",
+        "anchor": ""
+      },
+      {
+        "description": "/shop/category/animals/",
+        "title": "Animals",
+        "url": "/shop/category/animals/",
+        "children": [],
+        "icon": "icon-link",
+        "itemType": "link",
+        "anchor": ""
       }
     ],
     "icon": "icon-shipping-box color-black",
