--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
@@ -30,6 +30,22 @@
   </Structure>
   <GenericProperties>
     <GenericProperty>
+      <Key>31d99047-f173-4823-bc29-5d1c06ce26d8</Key>
+      <Name>Content Blocks</Name>
+      <Alias>contentBlocks</Alias>
+      <Definition>70047b1d-7277-4c91-bd44-de2daffa33bc</Definition>
+      <Type>Umbraco.BlockList</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>97dbe445-f832-467e-88f9-724320096dc7</Key>
       <Name>Buttons</Name>
       <Alias>heroButtons</Alias>
@@ -95,6 +111,13 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Key>4b4cc207-2abf-404a-bc71-44381ab239b4</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>1</SortOrder>
+    </Tab>
     <Tab>
       <Key>82134921-5b3a-4092-9d54-c97c8713862e</Key>
       <Caption>Hero</Caption>
