--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
@@ -22,6 +22,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>269618c6-6139-4b65-9690-5bc5239c83c8</Key>
+      <Name>Heading</Name>
+      <Alias>heading</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>63499e44-2478-4950-be4f-ca6515699cdd</Key>
       <Name>Internal Name</Name>
       <Alias>internalName</Alias>
@@ -38,6 +54,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>7ffe917f-db27-4118-bf2a-80f21b3e8d04</Key>
+      <Name>Introduction</Name>
+      <Alias>introduction</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>94330954-36a4-44d2-a87e-f598c15b917a</Key>
       <Name>Recent Products</Name>
       <Alias>recentProducts</Alias>
@@ -46,7 +78,7 @@
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>3</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
