--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -13,6 +13,51 @@
     <Template Key="8a6f705f-2f7f-48c9-8d60-9dbbc544aa3a">Home</Template>
   </Info>
   <Properties>
+    <contentBlocks>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/21e90455eb234b0fb0ee6745ce461250",
+        "settingsUdi": "umb://element/4ec3d3554fed4fbca6902d0ca90752c3"
+      },
+      {
+        "contentUdi": "umb://element/f65785884667478395726f42a65c04c8",
+        "settingsUdi": "umb://element/b310bf05aaef4fb5a91fa1dc9e0039aa"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "dee6aa15-7b3d-416c-a916-b544a4c21eab",
+      "udi": "umb://element/21e90455eb234b0fb0ee6745ce461250",
+      "internalName": "Featured Blocks",
+      "heading": "Featured Blocks",
+      "introduction": "",
+      "featuredProducts": "umb://document/29b84cde80794cd09f78410bff47d244,umb://document/dfb987e7a717451d9072c51b78d636fc,umb://document/17f7b581481c4701bcc1e8f63296b98b"
+    },
+    {
+      "contentTypeKey": "d9fc399e-9b38-4a4f-bea9-5b25de157ce7",
+      "udi": "umb://element/f65785884667478395726f42a65c04c8",
+      "internalName": "Recently Added",
+      "recentProducts": "umb://document/1435f4ed51a2467c9860d2b9e8092854",
+      "heading": "Recently Added ",
+      "introduction": ""
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "udi": "umb://element/4ec3d3554fed4fbca6902d0ca90752c3",
+      "backgroundColour": "{\r\n  \"value\": \"1a1d20\",\r\n  \"label\": \"Dark Subtle\",\r\n  \"sortOrder\": 15,\r\n  \"id\": \"16\"\r\n}"
+    },
+    {
+      "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "udi": "umb://element/b310bf05aaef4fb5a91fa1dc9e0039aa"
+    }
+  ]
+}]]></Value>
+    </contentBlocks>
     <heroButtons>
       <Value><![CDATA[{
   "layout": {
