--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/HomeContentBlocks.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/HomeContentBlocks.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="4b2b7c23-9f57-4fed-a9af-8faee6aab5ab" Alias="Products Content Blocks" Level="1">
+<DataType Key="70047b1d-7277-4c91-bd44-de2daffa33bc" Alias="Home Content Blocks" Level="1">
   <Info>
-    <Name>Products Content Blocks</Name>
+    <Name>Home Content Blocks</Name>
     <EditorAlias>Umbraco.BlockList</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
@@ -10,6 +10,18 @@
     {
       "backgroundColor": null,
       "contentElementTypeKey": "dee6aa15-7b3d-416c-a916-b544a4c21eab",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "d9fc399e-9b38-4a4f-bea9-5b25de157ce7",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "iconColor": null,
