--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -368,15 +368,23 @@
     "published": true,
     "naviHide": false,
     "culture": null,
-    "id": 1092
+    "id": 1092,
+    "collapsed": true
   },
   {
-    "description": "#",
+    "description": "/about-us/",
     "title": "About Us",
-    "url": "#",
+    "url": "/about-us/",
     "children": [],
-    "icon": "icon-link",
-    "itemType": "link"
+    "icon": "icon-article color-black",
+    "itemType": "link",
+    "udi": "umb://document/872f8f0b6923407790043275d55ce07f",
+    "key": "872f8f0b-6923-4077-9004-3275d55ce07f",
+    "name": "About Us",
+    "anchor": "",
+    "published": true,
+    "naviHide": false,
+    "culture": null
   },
   {
     "description": "#",
