--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/productfeature.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/productfeature.config
@@ -53,6 +53,22 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>ed3ebe74-561b-448d-ae4d-808810e59389</Key>
+      <Name>Is Visible</Name>
+      <Alias>umbracoNaviHide</Alias>
+      <Definition>b5cc9622-653e-44b9-98f4-c44ee6006ec8</Definition>
+      <Type>NestingContently</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
