--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
@@ -85,6 +85,22 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>099007e0-5add-4d3f-9c31-0bcd0dc2b648</Key>
+      <Name>Is Visible</Name>
+      <Alias>umbracoNaviHide</Alias>
+      <Definition>b5cc9622-653e-44b9-98f4-c44ee6006ec8</Definition>
+      <Type>NestingContently</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>4</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
