--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/meta.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/meta.config
@@ -2,7 +2,7 @@
 <ContentType Key="b052179a-7bf5-401f-87b8-1006f44d451a" Alias="meta" Level="2">
   <Info>
     <Name>Meta</Name>
-    <Icon>icon-search color-black</Icon>
+    <Icon>icon-search color-lime</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -31,6 +31,86 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
+      <Tab Alias="meta">Meta</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>7c19652e-114c-4d93-b999-947e0d09faa1</Key>
+      <Name>Internal Redirect</Name>
+      <Alias>umbracoInternalRedirectId</Alias>
+      <Definition>fd1e0da5-5606-4862-b679-5d0cf3a52a59</Definition>
+      <Type>Umbraco.ContentPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="meta">Meta</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>e0e463ba-a25c-4d61-8647-157ebcc58281</Key>
+      <Name>Is Visible</Name>
+      <Alias>umbracoNaviHide</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>5</SortOrder>
+      <Tab Alias="meta">Meta</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>e613a2fc-b495-4fd9-819c-9465c0d582cd</Key>
+      <Name>Temporary Redirect</Name>
+      <Alias>umbracoRedirect</Alias>
+      <Definition>fd1e0da5-5606-4862-b679-5d0cf3a52a59</Definition>
+      <Type>Umbraco.ContentPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="meta">Meta</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>a226b996-7ce0-4bfa-b8e4-1648710f4294</Key>
+      <Name>Url Alias</Name>
+      <Alias>umbracoUrlAlias</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>4</SortOrder>
+      <Tab Alias="meta">Meta</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>10a6c474-91a9-4a33-974e-9119d4528840</Key>
+      <Name>Url Name</Name>
+      <Alias>umbracoUrlName</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
       <Tab Alias="meta">Meta</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
