--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/slide.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/slide.config
@@ -69,6 +69,22 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>f39dc009-f527-4aff-b66c-4fb1229e7cbf</Key>
+      <Name>Is Visible</Name>
+      <Alias>umbracoNaviHide</Alias>
+      <Definition>b5cc9622-653e-44b9-98f4-c44ee6006ec8</Definition>
+      <Type>NestingContently</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
